// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Rating UU5.Bricks.Rating - onClick() 1`] = `
<Rating
  id="uuID"
  onClick={[Function]}
  value={2}
/>
`;

exports[`UU5.Bricks.Rating checkGrammar=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating checkGrammar=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating checkHighlight=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating checkHighlight=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating checkSpaces=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating checkSpaces=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating className="my-classname" 1`] = `
<div
  className="uu5-bricks-rating my-classname uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating content=12345 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating controlled=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating controlled=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating count=0 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Rating count=5 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating default props 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating disabled=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating disabled=true 1`] = `
<div
  className="uu5-bricks-rating uu5-common-disabled uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
  <span
    className="uu5-common-disabled-cover-transparent"
    key="disabledCoverTransparent"
  />
</div>
`;

exports[`UU5.Bricks.Rating docKit examples UU5.Bricks.Rating should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Rating
    count={10}
    id="uuID02"
    key="uuID02"
  />
  <Rating
    icon="mdi-heart"
    id="uuID03"
    key="uuID03"
  />
</div>
`;

exports[`UU5.Bricks.Rating dynamic=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating dynamic=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating hidden=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating hidden=true 1`] = `
<div
  className="uu5-bricks-rating uu5-common-hidden uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating icon="mdi-pinteres" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    icon="mdi-pinteres"
    key="5"
  />
  <RatingIcon
    icon="mdi-pinteres"
    key="4"
  />
  <RatingIcon
    icon="mdi-pinteres"
    key="3"
  />
  <RatingIcon
    icon="mdi-pinteres"
    key="2"
  />
  <RatingIcon
    icon="mdi-pinteres"
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating id="myId" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="myId"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating name="myName" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Rating nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="smallBox" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating noIndex=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating noIndex=true 1`] = `
<div
  className="uu5-bricks-rating uu5-noindex uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating selected=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating selected=true 1`] = `
<div
  className="uu5-bricks-rating uu5-common-selected uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating size="l" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-l"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating size="m" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating size="s" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating size="xl" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-xl"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating textCorrector=false 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating textCorrector=true 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
  />
  <RatingIcon
    key="1"
  />
</div>
`;

exports[`UU5.Bricks.Rating value=1.5 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
    value={0.5}
  />
  <RatingIcon
    key="1"
    value={1}
  />
</div>
`;

exports[`UU5.Bricks.Rating value=2 1`] = `
<div
  className="uu5-bricks-rating uu5-bricks-rating-size-m"
  id="uuID"
  style={Object {}}
  title={null}
>
  <RatingIcon
    key="5"
  />
  <RatingIcon
    key="4"
  />
  <RatingIcon
    key="3"
  />
  <RatingIcon
    key="2"
    value={1}
  />
  <RatingIcon
    key="1"
    value={1}
  />
</div>
`;
